syntax = "proto3";

option go_package = "gihtub.com/mynreden/microservices-go/common/api/proto";

package proto;

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
}

message CreateUserRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message CreateUserResponse {
  string id = 1;
  string username = 2;
  string email = 3;
  string password = 4;
  string message = 5;
}

message DeleteUserRequest {
  string id = 1;
}

message DeleteUserResponse {
  string message = 1;
}

message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  string id = 1;
  string username = 2;
  string email = 3;
  string password = 4;
  string message = 5;
}
